--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     </form>
     <h4>Azure Projects Would Like To Thank <a href="https://github.com/titaniumnetwork-dev">Titanium Network</a> ,For the Code And Allowing Us To Fork And Make Our Own Sites With Their Code</h4>
     <noscript>Sorry for the inconvenience. Your browser does not support Javascript, meaning functionality of this website is not guaranteed.</noscript>
+    <h2>
+      Azureprojects.ga
+    </h2>
   </div>
   <script src="./assets/main.js"></script>
   </body>
